[gd_scene load_steps=44 format=2]

[ext_resource path="res://scenes/Player.gd" type="Script" id=1]
[ext_resource path="res://assets/sprites/Super Grotto Escape Files/Super Grotto Escape Files/Characters/Player/spritesheets/player-jump.png" type="Texture" id=2]
[ext_resource path="res://assets/sprites/Super Grotto Escape Files/Super Grotto Escape Files/Characters/Player/spritesheets/player-idle.png" type="Texture" id=3]
[ext_resource path="res://assets/sprites/Super Grotto Escape Files/Super Grotto Escape Files/Characters/Player/spritesheets/player-run-shoot.png" type="Texture" id=4]
[ext_resource path="res://assets/sprites/Super Grotto Escape Files/Super Grotto Escape Files/Characters/Player/spritesheets/player-hurt-v2.png" type="Texture" id=5]
[ext_resource path="res://assets/sprites/Super Grotto Escape Files/Super Grotto Escape Files/Characters/Player/spritesheets/player-shoot.png" type="Texture" id=6]
[ext_resource path="res://assets/sprites/Super Grotto Escape Files/Super Grotto Escape Files/Characters/Player/sprites/Player-Hurt/player-hurt1.png" type="Texture" id=7]
[ext_resource path="res://assets/sprites/Super Grotto Escape Files/Super Grotto Escape Files/Characters/Player/sprites/Player-Hurt/player-hurt2.png" type="Texture" id=8]
[ext_resource path="res://assets/sprites/Super Grotto Escape Files/Super Grotto Escape Files/Characters/Player/sprites/Player-Slide/player-slide-2.png" type="Texture" id=9]
[ext_resource path="res://assets/sprites/Super Grotto Escape Files/Super Grotto Escape Files/Characters/Player/sprites/Player-Slide/player-slide.png" type="Texture" id=10]
[ext_resource path="res://assets/sprites/Effect_ElectricShield/30fps/Spritesheets/Effect_ElectricShield_1_265x265.png" type="Texture" id=11]
[ext_resource path="res://assets/sprites/Effect_Charged/30fps/Spritesheets/Effect_Charged_1_321x371.png" type="Texture" id=12]
[ext_resource path="res://assets/sfx/SuperGrottoEScape Audio Music Files/SuperGrottoEscape.mp3" type="AudioStream" id=13]

[sub_resource type="AtlasTexture" id=7]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 0, 4, 32, 34 )

[sub_resource type="AtlasTexture" id=8]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 32, 4, 32, 34 )

[sub_resource type="AtlasTexture" id=9]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 64, 4, 32, 34 )

[sub_resource type="AtlasTexture" id=10]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 96, 4, 32, 34 )

[sub_resource type="AtlasTexture" id=11]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 128, 4, 32, 34 )

[sub_resource type="AtlasTexture" id=12]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 160, 4, 32, 34 )

[sub_resource type="AtlasTexture" id=13]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 0, 4, 32, 34 )

[sub_resource type="AtlasTexture" id=14]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 32, 4, 32, 34 )

[sub_resource type="AtlasTexture" id=24]
flags = 4
atlas = ExtResource( 7 )
region = Rect2( 0, 0, 32, 38 )

[sub_resource type="AtlasTexture" id=25]
flags = 4
atlas = ExtResource( 8 )
region = Rect2( 0, 0, 32, 38 )

[sub_resource type="AtlasTexture" id=26]
flags = 4
atlas = ExtResource( 10 )
region = Rect2( 0, 0, 32, 38 )

[sub_resource type="AtlasTexture" id=27]
flags = 4
atlas = ExtResource( 9 )
region = Rect2( 0, 0, 32, 38 )

[sub_resource type="AtlasTexture" id=28]
flags = 4
atlas = ExtResource( 10 )
region = Rect2( 0, 0, 32, 38 )

[sub_resource type="AtlasTexture" id=29]
flags = 4
atlas = ExtResource( 9 )
region = Rect2( 0, 0, 32, 38 )

[sub_resource type="AtlasTexture" id=21]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 0, 0, 32, 38 )

[sub_resource type="AtlasTexture" id=22]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 32, 0, 32, 38 )

[sub_resource type="AtlasTexture" id=23]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 64, 0, 32, 38 )

[sub_resource type="AtlasTexture" id=15]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 0, 4, 32, 34 )

[sub_resource type="AtlasTexture" id=16]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 32, 4, 32, 34 )

[sub_resource type="AtlasTexture" id=17]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 64, 4, 32, 34 )

[sub_resource type="AtlasTexture" id=18]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 96, 4, 32, 34 )

[sub_resource type="AtlasTexture" id=19]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 128, 4, 32, 34 )

[sub_resource type="AtlasTexture" id=20]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 160, 4, 32, 34 )

[sub_resource type="SpriteFrames" id=6]
animations = [ {
"frames": [ SubResource( 7 ), SubResource( 8 ), SubResource( 9 ), SubResource( 10 ), SubResource( 11 ), SubResource( 12 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
}, {
"frames": [ SubResource( 13 ), SubResource( 14 ) ],
"loop": true,
"name": "jump",
"speed": 5.0
}, {
"frames": [ SubResource( 24 ), SubResource( 25 ), SubResource( 26 ), SubResource( 27 ), SubResource( 28 ), SubResource( 29 ) ],
"loop": true,
"name": "on_hit",
"speed": 5.0
}, {
"frames": [ SubResource( 21 ), SubResource( 22 ), SubResource( 23 ) ],
"loop": true,
"name": "shoot",
"speed": 5.0
}, {
"frames": [ SubResource( 15 ), SubResource( 16 ), SubResource( 17 ), SubResource( 18 ), SubResource( 19 ), SubResource( 20 ) ],
"loop": true,
"name": "walk",
"speed": 5.0
} ]

[sub_resource type="Animation" id=30]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -1, 1 ) ]
}

[sub_resource type="Animation" id=31]
resource_name = "on_hit_left"
length = 0.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.6 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1, 1 ) ]
}

[sub_resource type="Animation" id=35]
resource_name = "on_hit_right"
length = 0.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.6 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( -1, 1 ), Vector2( -1, 1 ) ]
}

[sub_resource type="Animation" id=33]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("ShieldSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 1 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("ShieldBreaks:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 10 ]
}

[sub_resource type="Animation" id=32]
resource_name = "shield_activated"
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("ShieldSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05, 0.1, 0.15, 0.2, 0.25, 0.3, 0.35, 0.4, 0.45, 0.5, 0.55, 0.6, 0.65, 0.7, 0.75 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16 ]
}

[sub_resource type="Animation" id=34]
resource_name = "shield_deactivated"
length = 0.6
tracks/0/type = "value"
tracks/0/path = NodePath("ShieldBreaks:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05, 0.1, 0.15, 0.2, 0.25, 0.3, 0.35, 0.4, 0.45, 0.5, 0.55 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 10, 9, 8, 7, 6, 5, 4, 3, 2, 1, 0, 12 ]
}

[node name="Player" type="KinematicBody2D"]
collision_mask = 2
script = ExtResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 6 )
animation = "on_hit"

[node name="Sprite" type="Sprite" parent="."]
visible = false
scale = Vector2( -1, 1 )
texture = ExtResource( 5 )
hframes = 6

[node name="ShieldSprite" type="Sprite" parent="."]
visible = false
position = Vector2( 3, 3 )
scale = Vector2( 0.255425, 0.270047 )
texture = ExtResource( 11 )
hframes = 6
vframes = 5
frame = 1

[node name="ShieldBreaks" type="Sprite" parent="."]
visible = false
position = Vector2( -1.875, -3 )
scale = Vector2( 0.57866, 0.566038 )
texture = ExtResource( 12 )
hframes = 7
vframes = 6
frame = 10

[node name="Camera2D" type="Camera2D" parent="."]
current = true
zoom = Vector2( 0.25, 0.25 )
smoothing_speed = 10.0

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
polygon = PoolVector2Array( -7, 17, -1, 17, -1, 14, 0, 12, 1, 11, 4, 13, 4, 17, 10, 17, 11, 16, 10, 15, 8, 14, 9, 13, 10, 12, 8, 10, 11, 10, 11, 9, 12, 8, 11, 4, 8, 2, 7, -1, 7, -12, 6, -15, 3, -12, -1, -12, -4, -15, -6, -12, -4, -9, -5, -8, -5, -4, -7, -4, -7, 1, -8, 3, -10, 4, -10, 8, -8, 10, -6, 10, -5, 8, -4, 9, -6, 12, -5, 14, -7, 15 )

[node name="RightPosition2D" type="Position2D" parent="."]
position = Vector2( 18, 2 )

[node name="LeftPosition2D" type="Position2D" parent="."]
position = Vector2( -18, 2 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 30 )
anims/on_hit_left = SubResource( 31 )
anims/on_hit_right = SubResource( 35 )

[node name="ShieldAnimation" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 33 )
anims/shield_activated = SubResource( 32 )
anims/shield_deactivated = SubResource( 34 )

[node name="AmmoCounterLabel" type="Label" parent="."]
margin_left = -125.0
margin_top = -73.0
margin_right = -66.0
margin_bottom = -59.0
text = "Ammo: 6"

[node name="ShieldStatusLabel" type="Label" parent="."]
margin_left = -125.0
margin_top = 61.0
margin_right = -22.0
margin_bottom = 75.0
text = "Shield Deactivated"

[node name="TaskLabel" type="Label" parent="."]
margin_left = 19.0
margin_top = -73.0
margin_right = 126.0
margin_bottom = -59.0
text = "Find \"The Portal\""

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
volume_db = -6.0

[node name="BackgroundMusic" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 13 )
volume_db = -12.0
autoplay = true
